<resources>
    <string name="app_name">Balladins</string>
    <string name="chercher">Chercher</string>
    <string name="code_d_acc_s">Code d\'accès</string>
    <string name="num_ro_de_r_servation">Numéro de réservation</string>
    <string name="rechercher_une_r_servation">Rechercher une réservation</string>
    <string name="supprimer">Supprimer</string>
    <string name="supprimer_une_r_servation">Supprimer une réservation</string>
    <string name="text_label_1">Hotel</string>
    <string name="text_label_2">Rechercher</string>
    <string name="text_label_3">Supprimer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="les_h_tels_disponibles">Les hôtels disponibles</string>
    <string name="image_de_l_h_tel">Image de l\'hôtel</string>
    <string name="pr_cedent">Précedent</string>
    <string name="suivant">Suivant</string>
</resources>