<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textview1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer_une_r_servation" />
    <TextView
        android:id="@+id/textview2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_ro_de_r_servation" />
    <EditText
        android:id="@+id/txtnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textview3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_d_acc_s" />
    <EditText
        android:id="@+id/txtcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnchercher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supprimer" />
    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>