<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageSupprimer">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer_une_r_servation"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/num_ro_de_r_servation"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtnum"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/code_d_acc_s"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtcode"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp" />

    <Button
        android:id="@+id/btnsupprimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:text="@string/supprimer" />

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_marginTop="240dp" />
</FrameLayout>