<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageReserv">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rechercher_une_r_servation"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/num_ro_de_r_servation"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/code_d_acc_s"
        android:textSize="16sp" />

    <EditText
        android:autofillHints="creditCardSecurityCode"
        android:id="@+id/txtcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:inputType="number"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnchercher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/chercher" />

    <TextView
        android:id="@+id/labelError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnchercher"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:textSize="15sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnchercher"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="8dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/imgHotel"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/image_de_l_h_tel"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <TextView
                    android:id="@+id/description1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/pr_cedent"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/suivant"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>